<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">RxWeather</string>
    <string name="error_message_generic">There was an error loading weather data.</string>
    <string name="error_message_offline">You are in offline mode.</string>
    <string name="error_message_check_connectione">Please check your internet connection.</string>

    <string name="preference_auto_location_label">Use current location</string>
    <string name="preference_auto_location_key">auto_location</string>

    <string name="preference_location_label">Location</string>
    <string name="preference_location_key">location</string>
    <string name="preference_location_default">11229</string>

    <string name="preference_units_label">Units</string>
    <string name="preference_units_label_title">Choose units</string>
    <string name="preference_units_key">units</string>

    <string name="preference_units_entry_imperial">Imperial</string>
    <string name="preference_units_entry_metric">Metric</string>
    <string name="preference_units_entry_imperial_value">Imperial</string>
    <string name="preference_units_entry_metric_value">Metric</string>

    <string name="format_temperature"><xliff:g if="temp">%1$s</xliff:g>\u00B0%2$s</string>
</resources>
